# kdtreepp

./: .clang-tidy  .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  conanfile.py
bench/: run.cpp
include/: kdtreepp.hpp
include/kdtreepp/: eigenkdtree.hpp  version.hpp
scripts/: clang-tidy.sh  coverage.sh  format.sh  run-clang-tidy.py  setup.sh
test/: test.cpp
